# OpenMP-Learning

./: CMakeLists.txt  Notes.md  README.md  example1.cpp  example2.cpp  example2_revised.cpp  example3.cpp  example4.cpp  example5.cpp  hello_world.cpp  test.cpp
examples/: example2.cpp  example4.cpp
